nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: muze-web-svc
  namespace: web
spec:
  type: NodePort
  selector:
    app: muze-web
  ports:
    - name: http
      port: 80
      targetPort: 8000
      nodePort: 30080
