rds-replica-externalname.yaml
apiVersion: v1
kind: Service
metadata:
  name: rds-replica-prod
  namespace: web
  labels:
    app: rds-replica
    env: prod
    managed-by: terraform
spec:
  type: ExternalName
  externalName: eks-rds-replica.cjk6a0asc67f.ap-northeast-2.rds.amazonaws.com
